# Filer

./: .cirrus.yml  CMakeLists.txt  Info.plist  Makefile  README.md  TESTING.md
filer/: CMakeLists.txt  about.ui  application.cpp  desktop-preferences.ui  desktopitemdelegate.cpp  desktoppreferencesdialog.cpp  desktoppreferencesdialog.h  desktopwindow.cpp  desktopwindow.h  launcher.cpp  main-win.ui  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  settings.cpp  settings.h
libfm-qt/: CMakeLists.txt  bundle.cpp  cachedfoldermodel.cpp  cachedfoldermodel.h  filelauncher.cpp  folderitemdelegate.cpp
src/: CMakeLists.txt  about.ui  airyx.cpp  airyx.h  application.cpp  application.h  bundle.cpp  cocoa.h  cocoa.mm  darksideconverter.cpp  darksideconverter.h  desktop-preferences.ui  desktopitemdelegate.cpp  desktopmainwindow.cpp  desktopmainwindow.h  desktoppreferencesdialog.cpp  desktopwindow.cpp  desktopwindow.h  dnddest.cpp  filelauncher.cpp  filemenu.cpp  filemenu.h  fileoperation.cpp  fileoperation.h  fileoperationdialog.cpp  filepropsdialog.cpp  filer.cpp  filesearchdialog.cpp  filesearchdialog.h  folderitemdelegate.cpp  folderitemdelegate.h  foldermenu.cpp  foldermodel.cpp  foldermodel.h  foldermodelitem.cpp  foldermodelitem.h  folderview.cpp  folderview.h  itemdelegatefunctions.cpp  itemdelegatefunctions.h  (+17 more)
src/icons/: Filer.icns
src/translations/: filer-qt.ts  filer-qt_cs_CZ.ts  filer-qt_da.ts  filer-qt_de.ts  filer-qt_el.ts  filer-qt_eo.ts  filer-qt_es.ts  filer-qt_fr.ts  filer-qt_he.ts  filer-qt_hu.ts  filer-qt_it.ts  filer-qt_ja.ts  filer-qt_ka.ts  filer-qt_ko.ts  filer-qt_lt.ts  filer-qt_nb_NO.ts  filer-qt_nl.ts  filer-qt_pl.ts  filer-qt_pt.ts  filer-qt_pt_BR.ts  filer-qt_ru.ts  filer-qt_sl.ts  filer-qt_sv.ts  filer-qt_tr.ts  filer-qt_uk.ts  filer-qt_zh_Hans.ts  filer-qt_zh_TW.ts
